# gadfly

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
gadfly/: __init__.py  __main__.py  api.py  cli.py  compiler.py  config.py  context.py  genproject.py  mako_templating.py  mp.py  page_hooks_api.py  template_runtime.py  templating.py  utils.py  watch.py
gadfly/assets/: ctx.py  errors.py
gadfly/utils/: __init__.py
tests/: test_templating.py
