[tool.poetry]
name = "gadfly"
version = "0.1.0"
description = ""
authors = ["Jesper Wendel Devantier <jwd@defmacro.it>"]

[tool.poetry.dependencies]
python = "^3.8"
watchdog = "^2.1.5"
typer = "^0.4.0"
Jinja2 = "^3.0.1"
dacite = "^1.6.0"
livereload = "^2.6.3"
markdown-it-py = "^1.1.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
